<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">easyTalk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="welcome">welcome easyTalk</string>
    <string name="forget">forget password?</string>
    <string name="register">register</string>

</resources>